fix: spacing in nested lists

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -352,6 +352,10 @@
   ul,
   ol {
     margin-bottom: var(--spacing-mmd);
+
+    li & {
+      margin-top: var(--spacing-md);
+    }
   }
 
   li > ul,
